<resources>
    <string name="app_name">TPCM</string>
    <string name="password">Password</string>
    <string name="username">Name</string>
    <string name="signup">Sign up</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">Login</string>
    <string name="Back">Back</string>
    <string name="popUpPoints">Points earned</string>
    <string name="errorLogin">Wrong credentials!</string>
    <string name="erroSignUpEmail">Username or Email already used!</string>
    <string name="erroSignUpPass">Passwords do not match!</string>
    <string name="errorMissingFields">Fields are missing!</string>
    <string name="errorInvalidEmail">Invalid Email!</string>
    <string name="ride">Ride</string>
    <string name="perfil">Profile</string>
    <string name="AddRide">Create Ride</string>
    <string name="search">Search</string>
    <string name="rides">Rides</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="LabelValor">Cost:</string>
    <string name="LabelLugaresDisponiveis">Seats Available:</string>
    <string name="LabelPontoEncontro">Meeting Location:</string>
    <string name="LabelAvaliacao">Evaluation:</string>
    <string name="botaoObterQrCode">Get QR Code</string>
    <string name="msgRide">You can now create rides!!!</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="meetingPoint">Meeting point:</string>
    <string name="car">Car:</string>
    <string name="date">Date:</string>
    <string name="price">Price (€):</string>
    <string name="seats">Available seats:</string>
    <string name="obs">Observations:</string>
    <string name="confirm">Confirm</string>
    <string name="msgNaoHabilitado">You are not yet able to take rides!!!</string>
    <string name="infoTornarCondutor">Go to My Profile > Become a Driver...</string>
    <string name="textSearchBoleia">What ride are you looking for?</string>
    <string name="erroMissingFrom">Missing from!</string>
    <string name="erroMissingTo">Missing to!</string>
    <string name="searchNoResults">There are no rides that match your search.</string>
    <string name="editperfil">Edit Profile</string>
    <string name="points">Points</string>
    <string name="claimpts">Claim Prize</string>
    <string name="makemedriver">Make me driver</string>
    <string name="cancel">Cancel</string>
    <string name="destination">Destination</string>
    <string name="departure">Departure</string>
    <string name="scan">SCAN</string>
    <string name="botaoLerQrCode">Scan QR Code</string>
    <string name="wishList">Wish List</string>
    <string name="moreInfo">More Info</string>
    <string name="success">Success!</string>
    <string name="error">Error!</string>
    <string name="infoQrPage">Your QR Code!</string>
    <string name="labelQrCodePage">Show at the time of the ride</string>
    <string name="information">INFORMATION</string>
    <string name="redflag">Represents the rides already taken, the deadline has passed</string>
    <string name="greenflag">Represents the rides that are yet to take place</string>
    <string name="textHelpQrCode">Here, you will have access to the QR Code associated with this trip. You can use it at the time of the ride to prove that it is you by presenting it to the driver of the car</string>
    <string name="submitEvaluation">Submit</string>
    <string name="change_pass">Change Password</string>
    <string name="atual_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm new password</string>
    <string name="bonus">Bonus:</string>
    <string name="title_dialog_accept_ride">Do you really want to confirm the ride?</string>
    <string name="introduzir_cartao_cidadao">Citizen Card number</string>
    <string name="cartaConducao">Driver\'s License number</string>
    <string name="errorChangePassWrong">Current password wrong.</string>
    <string name="right_qrcode">Confirmed passenger!</string>
    <string name="wrong_qrcode">Code does not match to no passengers!</string>
    <string name="yearCar">Year</string>
    <string name="modelCar">Model</string>
    <string name="brandCar">Brand</string>
    <string name="locationError">Provide a valid location!</string>
    <string name="remove">Remove</string>
    <string name="text_info_homepage">In the Boleiasss app, you can search for the rides you need, indicating the origin and destination and the date you want. It is possible to consult the rides that you have already taken or those that will still happen. In addition, you can become a driver and take a ride, earning more and more points and enjoying them.</string>
    <string name="emptyWishlist">Wishlist is empty.</string>
    <string name="code">Code</string>
    <string name="seatsFinish">This ride don\'t have any seats available!</string>
    <string name="first_award">Voucher up to 6€ Galp</string>
    <string name="second_award">10€ in purchases Continente</string>
    <string name="third_award">Travel offer for two</string>
    <string name="four_award">Electric scooter offer</string>
    <string name="missing_citizen_car">Missing Citizen Card number</string>
    <string name="missing_driver_license">Missing Driver´s License number</string>
    <string name="text_dialog_make_me_driver">Enter the values ​​equivalent to those represented in the figures</string>
    <string name="makeMeDriverSuccess">Congratulations, you are now able to create rides!!</string>
    <string name="makeMeDriverError">You are already able to take rides!</string>
    <string name="undefined">Undefined</string>
    <string name="carError">The inserted car was not found</string>
    <string name="noPrizesSelected">Choose your prize!!</string>
    <string name="erroPointsPrize">You don\'t have enough points.</string>
    <string name="prizeCode">Prize Code</string>
    <string name="prizeCodeRedeem">Use the following code to redeem the prize!!</string>
    <string name="sex">Sex:</string>
    <string name="avaliacao_condutor">Driver evaluation:</string>
    <string name="sex_label">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="errorNoCheckSex">Please choose male, female or other</string>
    <string name="other">Other</string>
    <string name="submitEvaluation">Submit</string>
    <string name="type_message">Type your message...</string>
</resources>