<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:onClick="onOptionsItemSelected"/>
    <item
        android:id="@+id/nav_rides"
        android:enabled="true"
        android:icon="@drawable/ic_car"
        android:title="@string/rides"
        android:onClick="onOptionsItemSelected"/>
    <item
        android:id="@+id/nav_services"
        android:enabled="true"
        android:icon="@drawable/ic_gear"
        android:title="@string/services"
        android:onClick="onOptionsItemSelected"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:onClick="onOptionsItemSelected"/>
</menu>