<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".aplication.CriarBoleia"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fromCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/from"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/toCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/fromCriarBoleia"
        android:hint="@string/to"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/meetingCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/toCriarBoleia"
        android:hint="@string/meetingPoint"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/carCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/meetingCriarBoleia"
        android:hint="@string/car"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/dateCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/carCriarBoleia"
        android:hint="@string/date"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/priceCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/dateCriarBoleia"
        android:hint="@string/price"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/seatsCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/priceCriarBoleia"
        android:hint="@string/seats"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/obsCriarBoleia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/seatsCriarBoleia"
        android:hint="@string/obs"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/insertComponentAddComponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/obsCriarBoleia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/principal"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:onClick="addRide"/>

    <!--Nav Bar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="#6B6B6B"
        app:itemIconSize="35dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />
</RelativeLayout>