<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rua"
    android:orientation="vertical"
    tools:context=".aplication.SignUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ccLabelName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/username"
        android:paddingStart="8dp"
        android:textSize="20sp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ccInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ccLabelEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ccLabelName"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="50dp"
        android:hint="@string/email"
        android:paddingStart="8dp"
        android:textSize="20sp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_email"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ccInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ccLabelPasse"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ccLabelEmail"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="50dp"
        android:hint="@string/password"
        android:paddingStart="8dp"
        android:textSize="20sp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ccInputPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ccLabelConfirmPasse"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ccLabelPasse"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="50dp"
        android:hint="@string/confirmpassword"
        android:paddingStart="8dp"
        android:textSize="20sp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ccInputConfirmPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkboxMasculino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ccLabelConfirmPasse"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkboxMasculino"
        android:layout_marginLeft="-15dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/checkboxMasculino"
        android:text="@string/male"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/checkboxFeminino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkboxMasculino"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/checkboxMasculino" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkboxFeminino"
        android:layout_marginLeft="-15dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/checkboxFeminino"
        android:text="@string/female"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/checkboxOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkboxFeminino"
        android:layout_marginLeft="60dp"
        android:layout_toRightOf="@+id/checkboxFeminino" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkboxOther"
        android:layout_marginLeft="-15dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/checkboxOther"
        android:text="@string/other"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/erroSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxMasculino"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/erroSignUpEmail"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/erroSignUpPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxMasculino"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/erroSignUpPass"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/errorMissingFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxMasculino"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/errorMissingFields"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/errorInvalidEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxMasculino"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/errorInvalidEmail"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/errorNoCheckSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxMasculino"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/errorNoCheckSex"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/loginBtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkboxMasculino"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/principal"
        android:onClick="loginPage"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/Back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/principal"
        app:strokeWidth="1dp" />


    <Button
        android:id="@+id/ccSubmitBtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxMasculino"
        android:layout_alignEnd="@id/ccLabelConfirmPasse"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:onClick="signUpSubmit" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@color/principal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:src="@drawable/logo"

            />

    </LinearLayout>

</RelativeLayout>