<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aplication.EditarPerfil">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/EditPerfilAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        android:src="@drawable/avatar_girl"/>

    <TextView
        android:id="@+id/EditNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@+id/EditPerfilAvatar"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/EditNameLabel"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/EditEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/EditName"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/EditEmailLabel"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/EditPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/EditEmail"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/EditPasswordLabel"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/EditConfirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmpassword"
        android:layout_below="@+id/EditPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/EditConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/EditConfirmPasswordLabel"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditConfirmPassword"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/GoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/principal"
            android:layout_weight="1"
            android:textSize="10dp"
            android:onClick="GoProfile"
            android:text="@string/cancel"
            android:layout_marginHorizontal="30dp"
            />

        <Button
            android:id="@+id/ConfirmEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PerfilAvatar"
            android:layout_alignStart="@+id/Points"
            android:backgroundTint="@color/principal"
            android:layout_weight="1"
            android:textSize="10dp"
            android:onClick="GoProfile"
            android:text="@string/confirm"
            android:layout_marginHorizontal="30dp"/>

    </LinearLayout>

</RelativeLayout>