<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rua"
    tools:context=".aplication.MakeMeDriver">


    <TextView
        android:id="@+id/titlePageMakeMeDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/makemedriver"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#878787"
        android:layout_below="@+id/titlePageMakeMeDriver"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        />



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textCartaoCidadao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/view"
        android:paddingStart="8dp"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/ic_person"
        android:hint="@string/introduzir_cartao_cidadao"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valueCartaoCidadao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textCartaConducao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/textCartaoCidadao"
        android:paddingStart="8dp"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
        android:hint="@string/cartaConducao"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valueCartaConducao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/errorMissingCitizenCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/missing_citizen_car"
        android:layout_below="@+id/textCartaoCidadao"
        android:textColor="#FF0000"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/errorMissingDriverLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/missing_driver_license"
        android:layout_below="@+id/textCartaConducao"
        android:textColor="#FF0000"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:visibility="invisible"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/goBackMakeMeDriver"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/principal"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:cornerRadius="20dp"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="2dp"
            />



        <Button
            android:id="@+id/confirmMakeMeDriver"
            android:text="@string/confirm"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/principal"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:cornerRadius="20dp"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="2dp"
            android:onClick="submitMakeMeDriver"
            />
    </LinearLayout>
    <!--Nav Bar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="#6B6B6B"
        app:itemIconSize="35dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />



</RelativeLayout>